new_tests/semantics/scope/bad/015_ED1.cm

def WEEKS type = {MON = 1 }
def WEEKS type = {TUES = 2 }
